--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
 
 
 #planet-2{
-    width: 50%;
+    width: 50%; 
     display: flex;
     flex-wrap: wrap;
     padding-left: 10%;
@@ -104,7 +104,7 @@ body{
 
 
 .child{
-    width: 30%;
+    width: 35%;
     height: 250px;
     padding-left: 2%;
     padding-top: 1%; 
@@ -137,4 +137,86 @@ body{
 
 .child:hover{
   margin-top: 1%;
+}
+
+
+/* media query */
+
+@media (max-width: 856px) {
+ 
+  #super-div{
+  
+    display:block;
+
+  }
+
+  #planet-2{
+     
+    display: block;
+    width: 60%;
+    
+  }
+
+  .child{
+    width: 93%;
+    padding-left: 5%;
+    padding-top: 3%;
+    margin-left: 20%; 
+  }
+
+  #planet{
+      width: 100%;
+  }
+
+  .shift{
+    left: 22%;
+  }
+
+  body{
+    background-position-x: 22%;
+  
+    
+  }
+
+}
+
+@media(min-width: 360px)and (max-width: 540px) {
+  .list{
+    display: block;
+    margin-top: -8px;
+  }
+
+  #image{
+    margin-left: -15%;
+  }
+
+  .shift{
+    position: relative;
+    top: -90px;
+    left: 600px;
+  }
+
+  .fa-solid{
+    margin-left: 81px;
+    margin-top: -96px;
+}
+
+.child{
+  width: 129%;
+  padding-left: 5%;
+  padding-top: 3%;
+  margin-left: 20%; 
+}
+
+#planet{
+  width: 140%;
+}
+
+#planet-2{
+     
+  display: block;
+  width: 100%;
+
+}
+
 }
